--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 rand = "0.8.4"
+mini-redis = "0.4"
 
 [[bin]]
 name = "hello-rust"
-path = "src/main.rs"
+path = "src/hello_world.rs"
